--- a/exercise3.html
+++ b/exercise3.html
@@ -43,8 +43,10 @@
 
     .book {
       background-color: #E58331;
+      /*grid-row: span 2
       /* TODO: Make the book div look like 
       the goal3 image using grid-row. */
+      grid-area: 1/3/3/-1;
     }
   </style>
 </head>
